# SignFlow

./: .env.example  .env.server.example  .gitignore  AGENTS.md  BUGFIX_DETECTION_SIGNES.md  CHANGELOG_NEW_FRONTEND.md  Caddyfile  Caddyfile.server  DEBUG_TORCHSERVE.md  DETECTION_IMPROVEMENTS.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  MEDIAPIPE_OPTIMIZATIONS_SUMMARY.md  NEW_FRONTEND_README.md  PHASE1_README.md  PHASE2_README.md  PHASE4_COMPLETE.md  QUICK_START.md  README.md  REDESIGN_COMPLETE.md  SignFlow-threat-model.md  TROUBLESHOOTING.md  docker-compose.arm64.yml  docker-compose.cpu.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.local.yml  docker-compose.lsfb.yml  docker-compose.no-torchserve.yml  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.updater.yml  docker-compose.yml  start.sh
backend/: .dockerignore  .env.example  CHANGELOG_GPU.md  DOCKER_MPS_LIMITATION.md  Dockerfile  Dockerfile.torchserve  GPU_IMPLEMENTATION.md  GPU_QUICKSTART.md  TORCHSERVE_MULTI_DEVICE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/app/api/: auth.py  (+17 more)
backend/docs/: GPU_SUPPORT.md
backend/scripts/: benchmark_torchserve.py  build_torchserve.sh  example_gpu_training.py  lsfb_init.sh  package_torchserve_model.sh  pretrain_encoder.py  test_gpu_support.py  test_mlflow_registry.py  train_crf.py  train_segmentation.py  train_seq2seq.py  verify_device_support.py  verify_phase1.py  verify_phase2.py
backend/tests/: __init__.py  conftest.py  test_config.py
(+525 files in other folders)
