[project]
name = "signflow-backend"
version = "0.1.0"
description = "SignFlow backend API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "structlog>=24.1.0",
  "redis>=5.0.8",
  "celery>=5.4.0",
  "numpy>=1.26.4",
  "torch>=2.3.1",
  "mediapipe>=0.10.9",
  "opencv-python>=4.9.0",
  "scipy>=1.11.0",
  "scikit-learn>=1.3.0",
  "orjson>=3.10.7",
  "python-slugify>=8.0.4",
  "psycopg[binary]>=3.2.1",
  "mlflow>=2.10.0",
  "onnx>=1.15.0",
  "onnxruntime>=1.17.0",
  "torch-geometric>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "ruff>=0.6.4",
  "mypy>=1.11.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
